2005-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped the package version to 20050820 which will be
        a real snapshot.

2005-08-16 22:54  Dan McMahill <danmc>

	* configure.ac, scheme/Makefile.am, scheme/gnet-PCBboard.scm,
	  scheme/gnet-PCBboard.scm.in, scheme/gnet-gsch2pcb.scm,
	  scheme/gnet-gsch2pcb.scm.in: - use the M4 program discovered at
	  configure time as the default for m4 in the PCB backends.

	  - use the PCB directories from configure time as the defaults in
	  the PCB backends.  These can still be changed with
	  --with-pcbm4dir and --with-pcbconfdir.  As usual, they can be
	  changed at runtime with the gsch2pcb project file, but hopefully
	  this gets things nominally right by default.

2005-08-15 10:12  Dan McMahill <danmc>

	* configure.ac: Search for a m4 to use.  Will be used by the pcb
	  netlisters.

2005-08-14 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gnetlist.c: Applied patch by Carlos Azevedo which moves the
	chdir after s_traverse since it might change the directory as well.

	* src/s_rename.c: Applied patch by Carlos Azevedo which 
	re-implements the rename structures to be completely dynamic.

	* tests/*: Re-copied golden test files to be current with sdb
	version changes.

        * configure.ac: Updated package version to 20050814.  This is a 
        temporary version and not a real release number.

	* scheme/gnet-gsch2pcb.scm: Oops accidentally removed an id tag.

2005-08-02 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gnet-gsch2pcb.scm: Update to Bill Wilson's gsch2pcb version
	1.5.

2005-06-12 Stuart Brorson <sdb@cloud9.net>
	* scheme/gnet-spice-sdb.scm: Changed order of writing out 
	netlist and .model/.subckt cards to facilitate use of 
	numparam with ngspice.
	
2005-05-16 Stuart Brorson <sdb@cloud9.net>

        * include/globals.h, src/globals.c, src/parsecmd.c:
	Incorporated new -e command line flag which forces embedding
	of .include file's contents into SPICE netlist.
