@@ -1,3 +1,8 @@
+2005-09-11 Stuart Brorson <sdb@cloud9.net>
+
+        * gnet-spice-sdb.scm: Incorporated patch from Paul Bunyk enabling
+	netlisting of Josephson junctions and other magnetic devices.
+
 2005-08-19 Ales Hvezda   <ahvezda@geda.seul.org>
 
         * configure.ac: Bumped the package version to 20050820 which will be
